# rs

./: Cargo.toml  LICENSE  README.md  build.sh  rustfmt.toml  taplo.toml
.github/workflows/: rust.yml
src/: arguments.rs  display.rs  main.rs  sort.rs  utility.rs
src/display/: header.rs  mod.rs  modified.rs  name.rs  owner.rs  permissions.rs  size.rs
