[package]
name = "rs"
description = "A Rust implementation of 'ls'."
authors = ["Jaxydog"]
categories = ["command-line-utilities", "filesystem"]
keywords = ["ls"]

version = "0.1.0"
edition = "2021"

license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/Jaxydog/rs"

[dependencies]
is_executable = "1.0"
getargs = "0.5"
owo-colors = { version = "4.0", features = ["supports-colors"] }

[target.'cfg(unix)'.dependencies]
umask = "2.1"
