[package]
name = "rs"
description = "A Rust implementation of 'ls'."
authors = ["Jaxydog"]
categories = ["command-line-utilities", "filesystem"]
keywords = ["ls"]

version = "0.1.0"
edition = "2021"

license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/Jaxydog/rs"

[dependencies]
getargs = "0.5"
is_executable = "1.0"
itoa = "1.0"
owo-colors = { version = "4.0", features = ["supports-colors"] }
ryu = "1.0"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }

[target.'cfg(unix)'.dependencies]
umask = "2.1"
